frame/support/test/tests/pallet_ui/event_type_invalid_bound_2.stderr
error: Invalid `type RuntimeEvent`, associated type `RuntimeEvent` is reserved and must bound: `From<Event>` or `From<Event<Self>>` or `From<Event<Self, I>>`
 --> $DIR/event_type_invalid_bound_2.rs:9:3
  |
9 |         type RuntimeEvent: IsType<<Self as frame_system::Config>::RuntimeEvent>;
  |         ^^^^
